Activity player editor width increased using node_ajax_content & Overlapping of content with header issue resolved

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -3729,7 +3729,7 @@ ul.nav_menu_1 {
     min-height: 100vh;
     margin-bottom:10px;
     #scstyle{
-        margin-top:-30px;
+        margin-top:-10px;
     }
 }
 
@@ -3770,6 +3770,7 @@ ul.nav_menu_1 {
 .activity_page_rendered{
     //margin-top:10px;
     margin-left:40px;
+   // width:145%;
 }
 /* Rating css */
 
